# safedata_validator

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGES.txt  LICENCE  README.md  SAFE_locations.json  Template.xlsx  Test_format_bad.xlsx  Test_format_good.xlsx  Test_format_good_external.xlsx  backbone_exploration_queries_new.sql  backbone_exploration_queries_old.sql  format_checker.py  mkdocs.yml  parent_taxon_level_analysis.R  pyproject.toml  requirements.txt  safe_dataset_checker.py  scrap.py  setup.cfg  setup.py  test_file_check.py  test_gbif_validate.py
.github/workflows/: ci.yml  sdv_ci.yaml  sdv_publish.yaml  sqlite_checker.yaml  temp.yml  test_2.yaml  unit_tests.yml
additional_scripts/: create_gbif_backbone_sqlite.py  create_ncbi_backbone_sqlite.py  create_ncbi_database_sqlite.py  run_validation_on_safedata_dir.py
devtools/: debugging_an_entry_point.py
docs/: availability.md  build_notes.md  faqs.md  format.md  index.md  install.md  package_development.md  safedata_at_SAFE.md  usage.md
docs/api/: extent.md  field.md  locations.md  logger.md  ncbi_taxa.md  overview.md  resources.md  summary.md  taxa.md  taxondb.md  zenodo.md
docs/command_line_tools/: overview.md  safedata_server.md  safedata_validate.md  safedata_zenodo.md
docs/command_line_tools/command_line_usage/: safedata_build_local_gbif.txt  safedata_build_local_ncbi.txt  safedata_server_post_metadata.txt  safedata_server_top.txt  safedata_server_update_gazetteer.txt  safedata_validate.txt  safedata_zenodo_amend_metadata.txt  safedata_zenodo_create.txt  safedata_zenodo_create_deposit.txt  safedata_zenodo_delete_file.txt  safedata_zenodo_discard.txt  safedata_zenodo_discard_deposit.txt  safedata_zenodo_generate_xml.txt  safedata_zenodo_html_description.txt  safedata_zenodo_info.txt  safedata_zenodo_maintain_ris.txt  safedata_zenodo_publish.txt  safedata_zenodo_publish_deposit.txt  safedata_zenodo_ris.txt  safedata_zenodo_show_config.txt  safedata_zenodo_sync_local_dir.txt  safedata_zenodo_top.txt  safedata_zenodo_update_metadata.txt  safedata_zenodo_upload_file.txt  safedata_zenodo_upload_metadata.txt  update_command_line_usage.sh
docs/command_line_usage/: safedata_validate.txt  safedata_zenodo_create.txt  safedata_zenodo_delete_file.txt  safedata_zenodo_discard.txt  safedata_zenodo_html_description.txt  safedata_zenodo_info.txt  safedata_zenodo_post_metadata.txt  safedata_zenodo_publish.txt  safedata_zenodo_ris.txt  safedata_zenodo_sync_local_dir.txt  safedata_zenodo_top.txt  safedata_zenodo_upload_file.txt  safedata_zenodo_upload_metadata.txt  update_command_line_usage.sh
docs/data_format/: data.md  faqs.md  gbif_taxa.md  locations.md  ncbi_taxa.md  other_formats.md  overview.md  summary.md  taxa.md
docs/data_managers/: overview.md
docs/data_managers/command_line_tools/: overview.md  safedata_metadata.md  safedata_server.md  safedata_validate.md  safedata_zenodo.md
docs/data_managers/install/: build_local_gbif.md  build_local_ncbi.md  configuration.md  create_gazetteer.py  create_gazetteer.r  gazetteer.md  gazetteer_creation.md  gazetteer_files.md  install.md
docs/data_managers/using_safedata/: overview.md  posting_metadata.md  publish_script.py  publish_script.sh  publishing_datasets.md  update_script.py  update_script.sh  validate_script.py  validate_script.sh  validating_datasets.md
docs/data_providers/: availability.md  overview.md
docs/data_providers/data_format/: Example.json  Example.xlsx  Template.xlsx  data.md  faqs.md  gbif_taxa.md  locations.md  ncbi_taxa.md  other_formats.md  overview.md  summary.md  taxa.md
docs/developers/: package_development.md  strange_problems.md
docs/developers/api/: field.md  locations.md  overview.md  resources.md  server.md  taxa.md  (+3 more)
docs/install/: build_local_gbif.md  build_local_ncbi.md  configuration.md  gbif_validation.md  install.md  ncbi_validation.md  taxonomic_validation.md
docs/recipes/: publish_script.py
docs/safe_dataset_checker/: gbif_validation.md  install.md  usage.md
docs/safedata_validator/: build_local_gbif.md  gbif_validation.md  install.md  usage.md
docs/scripts/: hooks.py
docs/usage/: build_local_gbif.md  install.md  usage.md
docs/using_safedata/: overview.md  publish_script.py  publish_script.sh
docs/zenodo_tools/: overview.md
example_inputs/: Test_format_dates.xlsx  Test_format_good_external.xlsx  Test_format_good_update.xlsx
local_db/: SAFE_locations.json  parent_taxon_level_analysis.R
safedata_validator/: __init__.py  config.py  dataset.py  entry_points.py  extent.py  field.py  gemini_xml_template.xml  genb_taxa.py  locations.py  logger.py  main.py  ncbi_taxa.py  resources.py  safedata_validator.py  scripts.py  server.py  summary.py  taxa.py  taxondb.py  utilities.py  validators.py  version.py  zenodo.py
safedata_validator/templates/: description_template.html  gemini_xml_template.xml
test/: conftest.py  test_dataset.py  test_dataworksheet.py  test_entry_points.py  test_extent.py  test_field.py  test_gbif_taxa.py  test_genb_taxa.py  test_locations.py  test_logger.py  test_ncbi_taxa.py  test_request_mocker.py  test_requests.py  test_resources.py  test_summary.py  test_taxa.py  test_taxondb.py  test_utilities.py  test_validators.py
test/fixtures/: Test_NCBItaxa_bad.xlsx  Test_NCBItaxa_good.xlsx  Test_NCBItaxa_weird.xlsx  Test_format_bad.xlsx  Test_format_bad_NCBI.xlsx  Test_format_bad_old.xlsx  Test_format_good.xlsx  Test_format_good_NCBI.json  Test_format_good_NCBI.xlsx  Test_format_weird_NCBI.xlsx  clean_test_excel_format.py  config_secrets_template.ini  database_file_not_gbif.sqlite  details_of_test_taxa.csv  gazetteer_simple.geojson  gbif_backbone_truncated.sqlite  gbif_backbone_truncator.py  location_aliases_simple.csv  locations.json  ncbi_database_truncated.sqlite  ncbi_database_truncator.py  notalocationsjson.json  project_database_bad.csv  project_database_simple.csv  test_gbif_taxa_details.csv  test_ncbi_taxa_details.csv  zenodo_27557.json
test_files/: Test_format_file_fields.xlsx  Test_format_good.xlsx  Test_format_good_external_update.xlsx
(+30 files in other folders)
