[tool.poetry]
authors = [
  "David Orme <d.orme@imperial.ac.uk>",
  "Jacob Cook <j.cook17@imperial.ac.uk>",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
description = "\"Validator for data files in the SAFE data submission format.\""
homepage = "https://safedata-validator.readthedocs.io/"
license = "MIT"
name = "safedata_validator"
readme = "README.md"
repository = "https://github.com/imperial_college_london/safedata_validator"
version = "3.0.1rc1"

[tool.poetry.scripts]
safedata_build_local_gbif = "safedata_validator.entry_points:_build_local_gbif_cli"
safedata_build_local_ncbi = "safedata_validator.entry_points:_build_local_ncbi_cli"
safedata_metadata = "safedata_validator.entry_points:_safedata_metadata_cli"
safedata_validate = "safedata_validator.entry_points:_safedata_validate_cli"
safedata_zenodo = "safedata_validator.entry_points:_safedata_zenodo_cli"

[tool.mypy]
ignore_missing_imports = true

[tool.poetry.dependencies]
appdirs = "^1.4.4"
configobj = "^5.0.6"
dominate = "^2.6.0"
dotmap = "^1.3.30"
jinja2 = "^3.1.3"
openpyxl = "^3.0.10"
python = "^3.10"
python-dateutil = "^2.8.2"
requests = "^2.31.0"
rispy = "^0.7.1"
shapely = "^2.0.4"
simplejson = "^3.17.6"
sympy = "^1.10.1"
tqdm = "^4.64.0"
typing-extensions = "^4.8.0"

[tool.poetry.group.test.dependencies]
pyfakefs = "^4.5.6"
pytest = "^7.0"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
pytest-mypy = "^0.9.1"

[tool.poetry.group.devenv.dependencies]
black = ">=22.3,<25.0"
flake8 = "7.0.0"
flake8-docstrings = "^1.6.0"
isort = "^5.10.1"
mypy = "^1.9.0"
pre-commit = "^2.18.1"
types-python-dateutil = "^2.8.19.12"
types-requests = "^2.28.11.17"
types-simplejson = "^3.19.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocs-include-markdown-plugin = "^6.0.4"
mkdocs-material = "^8.3.9"
mkdocstrings = "^0.24.0"
mkdocstrings-python = "^1.7.5"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.2.0"]
